--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
   <header>
     <nav class="container">
-      <img class="logo" src="./images/logo.png" alt="logo" />
+      <img class="logo" src="./images/logo.png" alt="Logo" />
       <ul class="menu-list">
-        <li href="#"><a class="link">Features</a></li>
-        <li href="#"><a class="link">About</a></li>
-        <li href="#"><a class="link">Blog</a></li>
-        <li href="#"><a class="btn-login">Login</a></li>
+        <li><a href="#" class="menu-link">Features</a></li>
+        <li><a href="#" class="menu-link">About Us</a></li>
+        <li><a href="#" class="menu-link">Blog</a></li>
+        <li><a href="#" class="menu-link btn-login">Login</a></li>
       </ul>
     </nav>
   </header>
